force-app/main/default/objects/Comapny__c/Comapny__c.object-meta.xml
<CustomObject>
    <label>Comapny</label>
    <nameField>
        <label>Comapny Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>