force-app/main/default/objects/Comapny__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <summarizedField>Worker__c.Experience__c</summarizedField>
    <summaryFilterItems>
        <field>Worker__c.Experience__c</field>
        <operation>lessOrEqual</operation>
        <value>20</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Worker__c.Experience__c</field>
        <operation>greaterOrEqual</operation>
        <value>10</value>
    </summaryFilterItems>
    <summaryForeignKey>Worker__c.Company__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>