force-app/main/default/objects/Comapny__c/fields/SUM__c.field-meta.xml
<CustomField>
    <fullName>SUM__c</fullName>
    <label>SUM</label>
    <summarizedField>Worker__c.Experience__c</summarizedField>
    <summaryForeignKey>Worker__c.Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>